# courses

./: README.md
GDK/sketch_feb18a/: sketch_feb18a.ino
GDK/sketch_mar11a/: sketch_mar11a.ino
GDK/sketch_may15a/: sketch_may15a.ino
OOP/OOP_Lab1/: OOP_Lab1.sln
OOP/OOP_Lab1/OOP_Lab1/: Bee.cs  ClassDiagram2.cd  Drone.cs  Hive.cs  HiveUtils.cs  Insect.cs  OOP_Lab1.csproj  Program.cs  Queen.cs  Seasons.cs  Worker.cs
OOP/OOP_Lab2/: OOP_Lab2.sln
OOP/OOP_Lab2/OOP_Lab2/: Bee.cs  ClassDiagram1.cd  Drone.cs  Hive.cs  HiveUtils.cs  ICollector.cs  Insect.cs  OOP_Lab2.csproj  Program.cs  Queen.cs  Seasons.cs  StingPatrol.cs  Worker.cs
OOP/OOP_Lab3/: OOP_Lab2.sln
OOP/OOP_Lab3/OOP_Lab2/: Apiary.cs  ApiaryExtensions.cs  Bee.cs  ClassDiagram1.cd  Drone.cs  Hive.cs  HiveUtils.cs  ICollector.cs  OOP_Lab3.csproj  Program.cs  Queen.cs  Seasons.cs  Worker.cs
OOP/OOP_Lab4/OOP_Lab2/: Apiary.cs  Bee.cs  Hive.cs  HiveUtils.cs  Insect.cs  Program.cs  StingPatrol.cs  Worker.cs
patterns/OTP_LAb/: OTP_LAb.sln
patterns/OTP_LAb/OTP_LAb/: OTP_LAb.csproj  Program.cs
patterns/OTP_Lab4/: OTP_Lab4.sln
patterns/OTP_Lab4/OTP_Lab4/: ClassDiagram2.cd  OTP_Lab4.csproj  Program.cs  State.cs  Strategy.cs
patterns/OTP_Lab5/: OTP_Lab5.sln
patterns/OTP_Lab5 - копия/: OTP_Lab5_v.2.sln
patterns/OTP_Lab5 - копия/OTP_Lab5/: ChainOfResponsibility.cs  ClassDiagram2.cd  Mediator.cs  OTP_Lab5_v.2.csproj  Program.cs
patterns/OTP_Lab5/OTP_Lab5/: Mediator.cs  Program.cs
patterns/PAT_Lab1_1/: PAT_Lab1_1.sln
patterns/PAT_Lab1_1/PAT_Lab1_1/: Calc.cs  PAT_Lab1_1.csproj  Program.cs
patterns/PAT_Lab1_2/: PAT_Lab1_2.sln
patterns/PAT_Lab1_2/PAT_Lab1_2/: ClassDiagram1.cd  Marketing.cs  PAT_Lab1_2.csproj  Program.cs
patterns/PAT_Lab2/: PAT_Lab2.sln
patterns/PAT_Lab2/PAT_Lab2/: Adapter.cs  ClassDiagram1.cd  PAT_Lab2.csproj  Program.cs  Proxy.cs
patterns/PAT_Lab3/: PAT_Lab3.sln
patterns/PAT_Lab3/PAT_Lab3/: AbstractFactory.cs  (+4 more)
progbase/exam_Лук'янець_Михайло_КП62_H11/: CMakeLists.txt  main.c
progbase/tasks/extra_console_game/src/: CMakeLists.txt  README.txt  interface.c  interface.h  leaderboard.save  main.c  save.c  save.h  settings.c  settings.h  snake.c  snake.h  tetris.c  tetris.h  tetrisnake.c  tetrisnake.h
progbase/tasks/matrix_paint/: CMakeLists.txt  main.c  matrix_paint.cbp  matrix_paint.depend  matrix_paint.layout
progbase2/KR2/: CMakeLists.txt  client.cpp  server.cpp
progbase2/KR2/include/: CustomDataType.h  Remote.h  Sender.h
progbase2/KR2/src/: CustomDataType.cpp  Remote.cpp  Sender.cpp
progbase2/SR_2_Lukianets_Mykhailo/: SR_2_Lukianets_Mykhailo.pro  createdata.cpp  createdata.h  createdata.ui  data.json  mainwindow.cpp  mainwindow.h  mainwindow.ui
progbase2/build-SR_2_Lukianets_Mykhailo-Desktop_Qt_5_8_0_GCC_64bit-Debug/: Makefile  SR_2_Lukianets_Mykhailo  blah  moc_createdata.cpp  moc_mainwindow.cpp  ui_createdata.h  ui_mainwindow.h
progbase2/build-practice2-Desktop_Qt_5_8_0_GCC_64bit-Debug/: Makefile  practice2  qrc_src.cpp
progbase2/build-practice_watcher-Desktop_Qt_5_8_0_GCC_64bit-Debug/: Makefile
progbase2/build-practice_watcher2-Desktop_Qt_5_8_0_GCC_64bit-Debug/: Makefile  moc_myclass.cpp  practice_watcher2
progbase2/build-testQt-Desktop_Qt_5_8_0_GCC_64bit-Debug/: Makefile  moc_mainwindow.cpp  testQt
progbase2/checkTest/: CMakeLists.txt  main.c
progbase2/cpWork/: CMakeLists.txt  main.c
progbase2/cpWork/include/: loader.h
progbase2/cpWork/src/: loader.c
progbase2/debugSR/: CMakeLists.txt  main.c
progbase2/doxyTest/: Doxyfile
progbase2/extra/: CMakeLists.txt
progbase2/labs/lab5/: CMakeLists.txt  main.c  КП62_ЛР5_Лук'янець_Михайло.docx
progbase2/labs/lab5/debug/Debug/: s  save.json  save.save  save.txt  save.xml  testSave
progbase2/labs/lab5/include/: list.h  saves.h
progbase2/labs/lab5/src/: dino.c  interface.c  list.c  saves.c  totest.c
progbase2/practice/: CMakeLists.txt
progbase2/practice/include/: csv.h
progbase2/practice/src/: csv.c
progbase2/practice2/: .file.json.swp  file.json  file.json.save  main.cpp  practice2.pro  src.qrc
progbase2/practice_udp/: Server.cpp
progbase2/practice_watcher/: main.cpp  myclass.h  practice_watcher.pro
progbase2/practice_watcher2/: main.cpp  practice_watcher2.pro
progbase2/tasks/edd_xml_java/c_part/: CMakeLists.txt  main.c
progbase2/tasks/edd_xml_java/c_part/include/: dataManagement.h
progbase2/tasks/edd_xml_java/c_part/src/: dataManagement.c  events.c
progbase2/tasks/tcp_client/: CMakeLists.txt  main.cpp  tcp_client.pro
progbase2/tasks/tcp_client/cpp_part/: CMakeCache.txt  CMakeLists.txt  Makefile  client.cpp  cmake_install.cmake  handlers.c
progbase2/tasks/tcp_client/cpp_part/include/: request.h
progbase2/tasks/tcp_client/cpp_part/src/: request.c
progbase2/tasks/udp/: CMakeLists.txt  Client.cpp  Server.cpp
progbase2/tasks/udp/include/: IpAddressClass.h  TcpClientClass.h  UdpClientClass.h
progbase2/tasks/udp/src/: IpAddressClass.cpp  TcpListenerClass.cpp  UdpClientClass.cpp
progbase2/tcp_client/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c  server
progbase2/testJ/: CMakeLists.txt  main.cpp
progbase2/testQt/: testQt.pro
progbase2/timers/: main.c
progbase2/untitled/: CMakeLists.txt  main.c
progbase3/: .gitignore  README.md  blueprintTestProject.uproject
progbase3/Content/: M_CubeParticle_Colored_Inst.uasset
progbase3/Source/: blueprintTestProject.Target.cs  blueprintTestProjectEditor.Target.cs
structures and tests/.metadata/: version.ini
structures and tests/OTPLab2/: pom.xml
structures and tests/OTP_Lab3/: pom.xml
structures and tests/OTPlab1/: pom.xml
structures and tests/algTesting/: 1.docx  1.xlsx  2.docx  2.xlsx
structures and tests/diskr_lab2/: Lab2_Лук'янець_КП-62.docx
structures and tests/diskr_lab3/: Lab3_Лук'янець_Михайло.docx
structures and tests/kr_1/: .project
structures and tests/lab3/: .classpath
structures and tests/p2_lab1/: .classpath  .project
structures and tests/p2_labStructures/: SLListDriver.java
web/prsr/: convertjson.json  g.js  index.js
web/webprogbase2/: README.md  package.json
(+680 files in other folders)
